--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "devDependencies": {
     "less": "~1.6.0",
     "grunt": "~0.4.2",
-    "express": "~3.4.7",
     "grunt-env": "~0.4.1",
     "grunt-less": "~0.1.7",
     "grunt-contrib-jshint": "~0.6.0",
@@ -21,11 +20,12 @@
     "grunt-oversprite": "~0.1.5",
     "gm": "~1.14.2",
     "grunt-spritesmith": "~1.21.0",
-    "handlebars": "~1.3.0",
-    "express-useragent": "0.0.9-1",
-    "async": "~0.2.9"
+    "express-useragent": "0.0.9-1"
   },
   "dependencies": {
+    "express": "~3.4.7",
+    "handlebars": "~1.3.0",
+    "async": "~0.2.9",
     "gm": "~1.14.2"
   }
 }
